compilateurDeca/src/test/deca/codegen/valid/avec_objet/axe2/filed_init_this.deca
// Description:
// Utilisation explicite de this dans une expression d'initialisation de champ 
// Resultats:
//  10 20
// Historique:
//    cree le 14/01/2026
class A {
    int x = 10;
    int y = this.x + 10;
}
{
    A a = new A();
    println(a.x, " ", a.y);
}
